test_programs/compile_failure/nested_list_declared_type/src/main.nr
fn main(x: Field, y: pub Field) {
    assert(x != y);

    let list: [[Field]] = [];
    assert(list.len() != 10);
}
